--- a/cpp/task03/Makefile
+++ b/cpp/task03/Makefile
@@ -4,5 +4,5 @@ CFLAGS=-I../sndfile/ -std=c++11
 LDFLAGS= -lsndfile -L../sndfile/
 
 all:
-	$(CC) -o oscillator oscillator.cpp $(CFLAGS) $(LDFLAGS)
+	$(CC) -o print_freq_table print_freq_table.cpp $(CFLAGS) $(LDFLAGS)
 
