--- a/cpp/task04/Makefile
+++ b/cpp/task04/Makefile
@@ -4,5 +4,5 @@ CFLAGS=-I../sndfile/ -std=c++11
 LDFLAGS= -lsndfile -L../sndfile/
 
 all:
-	$(CC) -o melody melody.cpp $(CFLAGS) $(LDFLAGS)
+	$(CC) -o minha minha.cpp $(CFLAGS) $(LDFLAGS)
 
